# chipdesign

./: CMakeLists.txt  README.md  main.cpp  run_all.sh
SteinerInstances/: example.txt
sheet_01/: main.cpp  results_table.txt  run_example.sh
sheet_02/lp_solver/: .gitignore  Makefile  README  lp.h  lpcplex.c  lpgurobi.c  lpqsopt.c  mss.c  msscxx.C  qsopt.a.cygwin64  qsopt.a.linux64  results_table.txt  run_all.sh
sheet_02/lp_solver/instances/: grid1.dimacs  path1.dimacs  path2.dimacs  path3.dimacs  tree1.dimacs
